--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -171,9 +171,12 @@ footer {
             z-index: 4;
             .product-image {
                 width: 230px;
+                height: 230px;
                 padding: 5px;
                 img {
                     width: 100%;
+                    height: 100%;
+                    object-fit: cover;
                     mix-blend-mode: multiply;
                 }
             }
@@ -208,19 +211,27 @@ footer {
         margin-top: 10%;
         .arrow-left,.arrow-right{
             position:absolute;
-            padding: 5px;
             transition: 2ms;
             background-color: transparent;
             border: none;
             font-size: 30px;
             color: $main;
             cursor: pointer;
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
         .arrow-left{
             left: -5%;
         }
         .arrow-right{
             right: -5%;
+        }
+        .arrow-left:hover,.arrow-right:hover{
+            background-color: gainsboro;
         }
     }
 }
