--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,9 +1,9 @@
-$main: #0a6a5a;
-$white: #fff;
+$main: #046642;
+$white: #ffffff;
 $hover: #E4ACCB;
-$padrao: #fbfbfb;
+$padrao: #ededed;
 $text: #2d2d2d;
-
+$secondary: #04664273;
 * {
     margin: 0;
     padding: 0;
@@ -22,7 +22,7 @@ body {
 }
 
 section {
-   margin: 30px 0;
+    margin: 30px 0;
 }
 
 header {
@@ -31,6 +31,7 @@ header {
     position: sticky;
     top: 0;
     z-index: 10;
+
     .content {
         display: flex;
         justify-content: space-between;
@@ -42,6 +43,7 @@ header {
                 display: flex;
                 gap: 5px;
                 align-items: center;
+
                 li {
                     list-style: none;
 
@@ -59,28 +61,32 @@ header {
                         justify-content: center;
                         border-radius: 4px;
                     }
-                    .home{
+
+                    .home {
                         background-image: url("data:image/svg+xml,%3C%3Fxml version='1.0' %3F%3E%3Csvg viewBox='0 0 576 512' fill='%23fff' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M575.8 255.5C575.8 273.5 560.8 287.6 543.8 287.6H511.8L512.5 447.7C512.5 450.5 512.3 453.1 512 455.8V472C512 494.1 494.1 512 472 512H456C454.9 512 453.8 511.1 452.7 511.9C451.3 511.1 449.9 512 448.5 512H392C369.9 512 352 494.1 352 472V384C352 366.3 337.7 352 320 352H256C238.3 352 224 366.3 224 384V472C224 494.1 206.1 512 184 512H128.1C126.6 512 125.1 511.9 123.6 511.8C122.4 511.9 121.2 512 120 512H104C81.91 512 64 494.1 64 472V360C64 359.1 64.03 358.1 64.09 357.2V287.6H32.05C14.02 287.6 0 273.5 0 255.5C0 246.5 3.004 238.5 10.01 231.5L266.4 8.016C273.4 1.002 281.4 0 288.4 0C295.4 0 303.4 2.004 309.5 7.014L564.8 231.5C572.8 238.5 576.9 246.5 575.8 255.5L575.8 255.5z'/%3E%3C/svg%3E");
                         background-repeat: no-repeat;
                         background-size: 30px;
                         background-position-x: center;
                         background-position-y: center;
                     }
-                    .home:hover{
+
+                    .home:hover {
                         background-image: url("data:image/svg+xml,%3C%3Fxml version='1.0' %3F%3E%3Csvg viewBox='0 0 576 512' fill='%23555' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M575.8 255.5C575.8 273.5 560.8 287.6 543.8 287.6H511.8L512.5 447.7C512.5 450.5 512.3 453.1 512 455.8V472C512 494.1 494.1 512 472 512H456C454.9 512 453.8 511.1 452.7 511.9C451.3 511.1 449.9 512 448.5 512H392C369.9 512 352 494.1 352 472V384C352 366.3 337.7 352 320 352H256C238.3 352 224 366.3 224 384V472C224 494.1 206.1 512 184 512H128.1C126.6 512 125.1 511.9 123.6 511.8C122.4 511.9 121.2 512 120 512H104C81.91 512 64 494.1 64 472V360C64 359.1 64.03 358.1 64.09 357.2V287.6H32.05C14.02 287.6 0 273.5 0 255.5C0 246.5 3.004 238.5 10.01 231.5L266.4 8.016C273.4 1.002 281.4 0 288.4 0C295.4 0 303.4 2.004 309.5 7.014L564.8 231.5C572.8 238.5 576.9 246.5 575.8 255.5L575.8 255.5z'/%3E%3C/svg%3E");
                     }
-                    .cart{
+
+                    .cart {
                         background-image: url("data:image/svg+xml,%3C%3Fxml version='1.0' %3F%3E%3Csvg id='Layer_1' fill='%23fff' style='enable-background:new 1 -1 100 100;' version='1.1' viewBox='1 -1 100 100' xml:space='preserve' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink'%3E%3Ctitle/%3E%3Cg%3E%3Cpath d='M74,70.7c-5.7,0-10.4,4.6-10.4,10.4c0,5.7,4.6,10.4,10.4,10.4c5.7,0,10.4-4.6,10.4-10.4c0,0,0,0,0,0 C84.3,75.4,79.7,70.7,74,70.7z'/%3E%3Cpath d='M92.3,21.1c-0.2,0-0.5-0.1-0.8-0.1H28.5l-1-6.7c-0.6-4.4-4.4-7.7-8.9-7.7h-8.1c-2.2,0-4,1.8-4,4s1.8,4,4,4h8.1 c0.5,0,0.9,0.4,1,0.9l6.2,42.2C26.6,63,31.2,67,36.6,67h41.6c5.2,0,9.7-3.7,10.8-8.8l6.5-32.5C95.9,23.6,94.5,21.5,92.3,21.1z'/%3E%3Cpath d='M38.2,70.7C32.4,71,28,75.8,28.2,81.5c0.2,5.5,4.7,9.9,10.2,9.9h0.2c5.7-0.3,10.2-5.1,9.9-10.8 C48.3,75.1,43.7,70.7,38.2,70.7z'/%3E%3C/g%3E%3C/svg%3E");
                         background-repeat: no-repeat;
                         background-size: 30px;
                         background-position-x: center;
                         background-position-y: center;
-                        
+
                     }
-                    .cart:hover{
+
+                    .cart:hover {
                         background-image: url("data:image/svg+xml,%3C%3Fxml version='1.0' %3F%3E%3Csvg id='Layer_1' fill='%23555' style='enable-background:new 1 -1 100 100;' version='1.1' viewBox='1 -1 100 100' xml:space='preserve' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink'%3E%3Ctitle/%3E%3Cg%3E%3Cpath d='M74,70.7c-5.7,0-10.4,4.6-10.4,10.4c0,5.7,4.6,10.4,10.4,10.4c5.7,0,10.4-4.6,10.4-10.4c0,0,0,0,0,0 C84.3,75.4,79.7,70.7,74,70.7z'/%3E%3Cpath d='M92.3,21.1c-0.2,0-0.5-0.1-0.8-0.1H28.5l-1-6.7c-0.6-4.4-4.4-7.7-8.9-7.7h-8.1c-2.2,0-4,1.8-4,4s1.8,4,4,4h8.1 c0.5,0,0.9,0.4,1,0.9l6.2,42.2C26.6,63,31.2,67,36.6,67h41.6c5.2,0,9.7-3.7,10.8-8.8l6.5-32.5C95.9,23.6,94.5,21.5,92.3,21.1z'/%3E%3Cpath d='M38.2,70.7C32.4,71,28,75.8,28.2,81.5c0.2,5.5,4.7,9.9,10.2,9.9h0.2c5.7-0.3,10.2-5.1,9.9-10.8 C48.3,75.1,43.7,70.7,38.2,70.7z'/%3E%3C/g%3E%3C/svg%3E");
                     }
-                    
+
                     a:hover {
                         color: $main;
                         background-color: $padrao;
@@ -93,33 +99,39 @@ header {
     }
 
 }
-.banner{
+
+.banner {
     background-size: auto;
     background-repeat: no-repeat;
     height: 460px;
     position: relative;
+
     // border: 1px solid red;
-      img{
+    img {
         width: 100%;
         object-fit: cover;
         height: 460px;
         // mix-blend-mode: difference;
     }
-    .conteudo-banner{
+
+    .conteudo-banner {
         position: absolute;
         background-color: $white;
         width: 500px;
         margin-left: 35%;
         margin-top: 10%;
         padding: 10px;
-        h1{
+
+        h1 {
             font-size: 52px;
         }
-        p{
+
+        p {
             font-size: 22px;
         }
     }
 }
+
 h1 {
     font-size: 28px;
     text-align: center;
@@ -136,31 +148,33 @@ h1 {
     }
 }
 
-footer {
-    background: $main;
-    height: 150px;
-    position: static;
-    bottom: 0;
+.products-title {
+    font-size: 32px;
+    text-align: center;
+    font-weight: 700;
+    margin-top: 30px;
 }
 
 .list-products {
     display: flex;
-    margin: 30px 0;
+    margin: 10px 0;
     column-gap: 25px;
     justify-content: space-between;
     overflow-x: scroll;
     padding-bottom: 25px;
+
     .product {
         position: relative;
         height: 430px;
+
         .product-link {
-            position: absolute;
+            background-color: $white;
+            position: relative;
             top: 30px;
             text-decoration: none;
             color: $text;
             background-color: $white;
-            position: relative;
-            width: 250px;
+            width: 260px;
             height: 400px;
             border: 1px solid $main;
             box-sizing: border-box;
@@ -169,10 +183,12 @@ footer {
             align-items: center;
             border-radius: 4px;
             z-index: 4;
+
             .product-image {
                 width: 230px;
                 height: 230px;
                 padding: 5px;
+
                 img {
                     width: 100%;
                     height: 100%;
@@ -195,22 +211,26 @@ footer {
 
             .btn-comprar {
                 position: absolute;
-                bottom: 5px;
+                bottom: 10px;
             }
         }
-        .product-link:hover{
+
+        .product-link:hover {
             margin-top: -30px;
             transition: 1s;
         }
     }
-    .arrows{
+
+    .arrows {
         position: absolute;
         width: 1120px;
         z-index: 5;
         height: 40px;
         margin-top: 10%;
-        .arrow-left,.arrow-right{
-            position:absolute;
+
+        .arrow-left,
+        .arrow-right {
+            position: absolute;
             transition: 2ms;
             background-color: transparent;
             border: none;
@@ -224,20 +244,24 @@ footer {
             align-items: center;
             justify-content: center;
         }
-        .arrow-left{
+
+        .arrow-left {
             left: -5%;
         }
-        .arrow-right{
+
+        .arrow-right {
             right: -5%;
         }
-        .arrow-left:hover,.arrow-right:hover{
+
+        .arrow-left:hover,
+        .arrow-right:hover {
             background-color: gainsboro;
         }
     }
 }
 
 .list-products::-webkit-scrollbar {
-    background-color: transparent;
+    background-color: $secondary;
     height: 10px;
 }
 
@@ -267,9 +291,10 @@ footer {
     color: $main;
 }
 
-.products-title {
-    font-size: 32px;
-    text-align: center;
-    font-weight: 700;
-    margin-top: 30px;
+footer {
+    background: $main;
+    height: 150px;
+    position: static;
+    bottom: 0;
 }
+@import './minicart.scss'
